--- a/src/index.pug
+++ b/src/index.pug
@@ -10,6 +10,13 @@ html(lang="en")
   body
     .wrapper
       .maincontent
-        +image('content/user.jpg', 'user-pic')
-        +icon('link', 'link-class')
-        .icon-bg
+        header.header
+          .container
+            .logo
+              a.logo__link(href="#") AN
+            .menu
+              ul.menu__list
+                li.menu__item
+                  a.menu__link(href="#") Главная
+                li.menu__item
+                  a.menu__link(href="#") Обо мне
